<resources>
    <string name="app_name">Quizly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_remove_bookmark">Add/Remove Bookmark</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit_test">Submit Test</string>
    <string name="_00_00">00:00</string>
    <string name="welcome_to_the_quiz">Welcome to the Quiz</string>
    <string name="rules">Rules:</string>
    <string name="rule_1">- There are 10 questions in this quiz.</string>
    <string name="rule_2">- You have 10 minutes to solve this quiz.</string>
    <string name="rule_3">After 10 minutes the quiz will be automatically submitted.</string>
    <string name="good_luck">Good luck!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="question">Question</string>
    <string name="bookmark_button">bookmark button</string>
    <string name="question_done_button">question done button</string>
    <string name="positin_const">position</string>
    <string name="alert_dialog_message">Are you sure you want to Submit the test?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fetching_questions">Fetching Questions</string>
    <string name="please_wat">Please wait...</string>
    <string name="list_unavailable">Questions list unavailable</string>
    <string name="time_taken">Time taken: </string>
    <string name="your_score">Your score: </string>
    <string name="quiz">Quiz</string>
</resources>