<?xml version="1.0" encoding="utf-8"?><!-- This layout represents a single item in a RecyclerView. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start">

    <!-- TextView to display the question name. -->
    <TextView
        android:id="@+id/question_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/question"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/i_bookmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="wrap" />

    <!-- ImageButton to bookmark the question. -->
    <ImageButton
        android:id="@+id/i_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_color"
        android:src="@drawable/baseline_bookmark_added_24"
        app:layout_constraintEnd_toStartOf="@+id/i_done"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/bookmark_button" />

    <!-- ImageButton to mark the question as done. -->
    <ImageButton
        android:id="@+id/i_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_color"
        android:src="@drawable/twotone_done_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/question_done_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
